# aichar

./: .replit  Cargo.toml  README.md
.cargo/registry/cache/index.crates.io-6f17d22bba15001f/: serde-1.0.186.crate
.cargo/registry/src/index.crates.io-6f17d22bba15001f/libc-0.2.147/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde-1.0.186/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
src/: kamus.rs  lib.rs  main.rs
