[package]
name = "aichar7_7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
dioxus-web = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
