[package]
name = "aichar7_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rang = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

